apps/databases/influxdb/app/datamigration-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: databases
  name: rsync-server
  labels:
    app: rsync-server
spec:
  replicas: 1
  strategy:
    type: Recreate  # Don't use RollingUpdate because PVC can only be mounted by one pod at a time
  selector:
    matchLabels:
      app: rsync-server
  template:
    metadata:
      labels:
        app: rsync-server
    spec:
      containers:
      - name: rsync-server
        image: dazzathewiz/rsync-server
        volumeMounts:
        - name: appdata
          mountPath: /appdata
        ports:
          - containerPort: 22
          - containerPort: 873
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: influx-v2-data
